# chordpro-rs

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  SECURITY.md  flake.nix
.claude/commands/: doc-quality-check.md
.claude/rules/: adr-discipline.md  doc-maintenance.md  issue-workflow.md  package-documentation.md  root-cause-fixes.md
.github/snapshots/: readme-commands.txt
.github/workflows/: ci.yml  claude.yml  deploy-playground.yml  docker.yml  ffi.yml  github-action-ci.yml  jetbrains.yml  kotlin.yml  napi.yml  nix.yml  npm-publish-tree-sitter.yml  npm-publish.yml  post-release.yml  python.yml  readme-smoke.yml  release-verify.yml  release.yml  ruby.yml  swift.yml  upstream-watch.yml  vscode-extension.yml  wasm.yml
ci/: release-channels.toml  version-skew-allowlist.toml
crates/cli/: Cargo.toml  README.md
crates/convert-musicxml/: Cargo.toml
crates/core/: Cargo.toml  README.md
crates/ffi/: Cargo.toml  README.md  pyproject.toml
crates/ffi/chordsketch/: __init__.py
crates/ffi/src/: lib.rs
crates/lsp/: Cargo.toml
crates/napi/: Cargo.toml  README.md  package.json
crates/render-html/: Cargo.toml  README.md
crates/render-pdf/: Cargo.toml  README.md
crates/render-text/: Cargo.toml  README.md
crates/wasm/: Cargo.toml  README.md
docs/: dev-setup.md  editors.md  github-action.md  releasing.md
scripts/: _release_channels.py  check-release-channels.py  check-version-consistency.py  test_check_release_channels.py  test_check_version_consistency.py
syntaxes/: chordpro.tmLanguage.json
(+81 files in other folders)
